--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -5,7 +5,7 @@
 
 on: workflow_dispatch
 
-name: release-build
+name: build-test
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -29,3 +29,7 @@ jobs:
       - name: Build
         run: |
           make release -j$(nproc)
+          
+      - name: LS
+        run: |
+          ls build
