--- a/.github/workflows/build-test2.yml
+++ b/.github/workflows/build-test2.yml
@@ -35,7 +35,8 @@ jobs:
         run: echo ${{ steps.vars.outputs.short_ref }}
         
       - name: 打印GITHUB_ACTION_PATH
-        run: echo "${{env.GITHUB_ACTION_PATH}}" 
+        run: echo "------$GITHUB_ACTION_PATH" 
+             echo "======${{GITHUB.ACTION_PATH}}" 
         
       - name: 打印
         run: echo ${PWD} && ls -l ${PWD}      
