--- a/.github/workflows/build-test2.yml
+++ b/.github/workflows/build-test2.yml
@@ -34,14 +34,43 @@ jobs:
       - name: 获取上一步骤设置的值
         run: echo ${{ steps.vars.outputs.short_ref }}
         
-      - name: 设置ENV_ACTION_PATH值
-        run: echo "ENV_ACTION_PATH=${GITHUB_ACTION_PATH}" >> $GITHUB_ENV
-        
-      - name: 打印自定义环境变量ENV_ACTION_PATH
-        run: echo ${{env.ENV_ACTION_PATH}}
+      - name: 查看目录文件=>GITHUB_ACTION_PATH
+        run: ls -l ${GITHUB_ACTION_PATH}
         
       - name: 打印
         run: echo ${PWD} && ls -l ${PWD}      
-        
+
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+      - name: Dump job context
+        env:
+          JOB_CONTEXT: ${{ toJson(job) }}
+        run: echo "$JOB_CONTEXT"
+      - name: Dump steps context
+        env:
+          STEPS_CONTEXT: ${{ toJson(steps) }}
+        run: echo "$STEPS_CONTEXT"
+      - name: Dump runner context
+        env:
+          RUNNER_CONTEXT: ${{ toJson(runner) }}
+        run: echo "$RUNNER_CONTEXT"
+      - name: Dump strategy context
+        env:
+          STRATEGY_CONTEXT: ${{ toJson(strategy) }}
+        run: echo "$STRATEGY_CONTEXT"
+      - name: Dump matrix context
+        env:
+          MATRIX_CONTEXT: ${{ toJson(matrix) }}
+        run: echo "$MATRIX_CONTEXT"
+
+      - name: Show default environment variables
+        run: |
+          echo "The job_id is: $GITHUB_JOB"   # reference the default environment variables
+          echo "The id of this action is: $GITHUB_ACTION"   # reference the default environment variables
+          echo "The run id is: $GITHUB_RUN_ID"
+          echo "The GitHub Actor's username is: $GITHUB_ACTOR"
+          echo "GitHub SHA: $GITHUB_SHA"
         
         
