--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -38,3 +38,15 @@ jobs:
         run: |
           chmod 777 -R ${PWD}/build
           ${PWD}/build/linux-amd64/trojan-go -version
+          
+      - name: 上传文件Tencent Cloud COS Action
+        uses: TencentCloud/cos-action@v1
+        with:
+          secret_id: ${{ secrets.TENCENT_CLOUD_SECRET_ID }}
+          secret_key: ${{ secrets.TENCENT_CLOUD_SECRET_KEY }}
+          cos_bucket: ${{ secrets.COS_BUCKET }}
+          cos_region: ${{ secrets.COS_REGION }}
+          local_path: ${PWD}/build
+          remote_path: trojan-go/${{ env.TAG_NAME }}
+          clean: true
+          
