--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -46,7 +46,7 @@ jobs:
           secret_key: ${{ secrets.TENCENT_CLOUD_SECRET_KEY }}
           cos_bucket: ${{ secrets.COS_BUCKET }}
           cos_region: ${{ secrets.COS_REGION }}
-          local_path: ${PWD}/build
+          local_path: ${{ github.GITHUB_ACTION_PATH }}/build
           remote_path: trojan-go/${{ env.TAG_NAME }}
           clean: true
           
