--- a/.github/workflows/build-test2.yml
+++ b/.github/workflows/build-test2.yml
@@ -47,7 +47,7 @@ jobs:
           secret_key: ${{ secrets.TENCENT_CLOUD_SECRET_KEY }}
           cos_bucket: ${{ secrets.COS_BUCKET }}
           cos_region: ${{ secrets.COS_REGION }}
-          local_path: ${{ github.GITHUB_ACTION_PATH }}/version
+          local_path: ${{ github.action_path }}/version
           remote_path: trojan-go/${{ env.TAG_NAME }}
           clean: true
 
