--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -35,14 +35,43 @@ jobs:
           chmod 777 -R ${PWD}/build
           ${PWD}/build/linux-amd64/trojan-go -version
           
-      - name: 上传文件Tencent Cloud COS Action
+      - name: 上传文件darwin-amd64=>Tencent Cloud COS Action
         uses: TencentCloud/cos-action@v1
         with:
           secret_id: ${{ secrets.TENCENT_CLOUD_SECRET_ID }}
           secret_key: ${{ secrets.TENCENT_CLOUD_SECRET_KEY }}
           cos_bucket: ${{ secrets.COS_BUCKET }}
           cos_region: ${{ secrets.COS_REGION }}
-          local_path: ${{ env.ENV_ACTION_PATH }}/build/*amd64
+          local_path: ${{ env.ENV_ACTION_PATH }}/build/darwin-amd64
           remote_path: trojan-go/${{ env.TAG_NAME }}
           clean: true
+          
+      - name: 上传文件linux-amd64=>Tencent Cloud COS Action
+        uses: TencentCloud/cos-action@v1
+        with:
+          secret_id: ${{ secrets.TENCENT_CLOUD_SECRET_ID }}
+          secret_key: ${{ secrets.TENCENT_CLOUD_SECRET_KEY }}
+          cos_bucket: ${{ secrets.COS_BUCKET }}
+          cos_region: ${{ secrets.COS_REGION }}
+          local_path: ${{ env.ENV_ACTION_PATH }}/build/linux-amd64
+          remote_path: trojan-go/${{ env.TAG_NAME }}
+          clean: true         
+          
+      - name: 上传文件windows=>Tencent Cloud COS Action
+        uses: TencentCloud/cos-action@v1
+        with:
+          secret_id: ${{ secrets.TENCENT_CLOUD_SECRET_ID }}
+          secret_key: ${{ secrets.TENCENT_CLOUD_SECRET_KEY }}
+          cos_bucket: ${{ secrets.COS_BUCKET }}
+          cos_region: ${{ secrets.COS_REGION }}
+          local_path: ${{ env.ENV_ACTION_PATH }}/build/windows-amd64
+          remote_path: trojan-go/${{ env.TAG_NAME }}
+          clean: true         
+          
+          
+          
+          
+          
+          
+          
           
