--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -25,6 +25,10 @@ jobs:
       - name: 设置ENV_ACTION_PATH值
         shell: bash
         run: echo "ENV_ACTION_PATH=$(echo ${PWD})" >> $GITHUB_ENV
+        
+      - name: 设置BRANCH_NAME
+        shell: bash
+        run: echo "ENV_BRANCH_NAME=$(echo ${GITHUB_REF#refs/heads/} | tr / -)" >> $GITHUB_ENV
           
       - name: 查看结果文件
         run: |
@@ -43,7 +47,7 @@ jobs:
           cos_bucket: ${{ secrets.COS_BUCKET }}
           cos_region: ${{ secrets.COS_REGION }}
           local_path: ${{ env.ENV_ACTION_PATH }}/build/darwin-amd64
-          remote_path: trojan-go/${{ env.TAG_NAME }}
+          remote_path: trojan-go/darwin-amd64/${{ env.ENV_BRANCH_NAME }}
           clean: true
           
       - name: 上传文件linux-amd64=>Tencent Cloud COS Action
@@ -54,7 +58,7 @@ jobs:
           cos_bucket: ${{ secrets.COS_BUCKET }}
           cos_region: ${{ secrets.COS_REGION }}
           local_path: ${{ env.ENV_ACTION_PATH }}/build/linux-amd64
-          remote_path: trojan-go/${{ env.TAG_NAME }}
+          remote_path: trojan-go/linux-amd64/${{ env.ENV_BRANCH_NAME }}
           clean: true         
           
       - name: 上传文件windows=>Tencent Cloud COS Action
@@ -65,7 +69,7 @@ jobs:
           cos_bucket: ${{ secrets.COS_BUCKET }}
           cos_region: ${{ secrets.COS_REGION }}
           local_path: ${{ env.ENV_ACTION_PATH }}/build/windows-amd64
-          remote_path: trojan-go/${{ env.TAG_NAME }}
+          remote_path: trojan-go/windows-amd64/${{ env.ENV_BRANCH_NAME }}
           clean: true         
           
           
