--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -47,8 +47,8 @@ jobs:
           cos_bucket: ${{ secrets.COS_BUCKET }}
           cos_region: ${{ secrets.COS_REGION }}
           local_path: ${{ env.ENV_ACTION_PATH }}/build/darwin-amd64
-          remote_path: trojan-go/darwin-amd64/${{ env.ENV_BRANCH_NAME }}
-          clean: true
+          remote_path: trojan-go/${{ env.ENV_BRANCH_NAME }}
+          clean: false          #清空远程存储桶当前路径下的文件
           
       - name: 上传文件linux-amd64=>Tencent Cloud COS Action
         uses: TencentCloud/cos-action@v1
@@ -58,8 +58,8 @@ jobs:
           cos_bucket: ${{ secrets.COS_BUCKET }}
           cos_region: ${{ secrets.COS_REGION }}
           local_path: ${{ env.ENV_ACTION_PATH }}/build/linux-amd64
-          remote_path: trojan-go/linux-amd64/${{ env.ENV_BRANCH_NAME }}
-          clean: true         
+          remote_path: trojan-go/${{ env.ENV_BRANCH_NAME }}
+          clean: false         
           
       - name: 上传文件windows=>Tencent Cloud COS Action
         uses: TencentCloud/cos-action@v1
@@ -69,8 +69,8 @@ jobs:
           cos_bucket: ${{ secrets.COS_BUCKET }}
           cos_region: ${{ secrets.COS_REGION }}
           local_path: ${{ env.ENV_ACTION_PATH }}/build/windows-amd64
-          remote_path: trojan-go/windows-amd64/${{ env.ENV_BRANCH_NAME }}
-          clean: true         
+          remote_path: trojan-go/${{ env.ENV_BRANCH_NAME }}
+          clean: false         
           
           
           
