--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -47,7 +47,7 @@ jobs:
           cos_bucket: ${{ secrets.COS_BUCKET }}
           cos_region: ${{ secrets.COS_REGION }}
           local_path: ${{ env.ENV_ACTION_PATH }}/build/darwin-amd64
-          remote_path: trojan-go/${{ env.ENV_BRANCH_NAME }}
+          remote_path: trojan-go/${{ env.ENV_BRANCH_NAME }}/darwin
           clean: false          #清空远程存储桶当前路径下的文件
           
       - name: 上传文件linux-amd64=>Tencent Cloud COS Action
@@ -58,7 +58,7 @@ jobs:
           cos_bucket: ${{ secrets.COS_BUCKET }}
           cos_region: ${{ secrets.COS_REGION }}
           local_path: ${{ env.ENV_ACTION_PATH }}/build/linux-amd64
-          remote_path: trojan-go/${{ env.ENV_BRANCH_NAME }}
+          remote_path: trojan-go/${{ env.ENV_BRANCH_NAME }}/linux
           clean: false         
           
       - name: 上传文件windows=>Tencent Cloud COS Action
@@ -69,7 +69,7 @@ jobs:
           cos_bucket: ${{ secrets.COS_BUCKET }}
           cos_region: ${{ secrets.COS_REGION }}
           local_path: ${{ env.ENV_ACTION_PATH }}/build/windows-amd64
-          remote_path: trojan-go/${{ env.ENV_BRANCH_NAME }}
+          remote_path: trojan-go/${{ env.ENV_BRANCH_NAME }}/windows
           clean: false         
           
           
