--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -39,38 +39,45 @@ jobs:
           chmod 777 -R ${PWD}/build
           ${PWD}/build/linux-amd64/trojan-go -version
           
-      - name: 上传文件darwin-amd64=>Tencent Cloud COS Action
-        uses: TencentCloud/cos-action@v1
-        with:
-          secret_id: ${{ secrets.TENCENT_CLOUD_SECRET_ID }}
-          secret_key: ${{ secrets.TENCENT_CLOUD_SECRET_KEY }}
-          cos_bucket: ${{ secrets.COS_BUCKET }}
-          cos_region: ${{ secrets.COS_REGION }}
-          local_path: ${{ env.ENV_ACTION_PATH }}/build/darwin-amd64
-          remote_path: trojan-go/${{ env.ENV_BRANCH_NAME }}/darwin
-          clean: false          #清空远程存储桶当前路径下的文件
           
-      - name: 上传文件linux-amd64=>Tencent Cloud COS Action
-        uses: TencentCloud/cos-action@v1
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3.1.0
         with:
-          secret_id: ${{ secrets.TENCENT_CLOUD_SECRET_ID }}
-          secret_key: ${{ secrets.TENCENT_CLOUD_SECRET_KEY }}
-          cos_bucket: ${{ secrets.COS_BUCKET }}
-          cos_region: ${{ secrets.COS_REGION }}
-          local_path: ${{ env.ENV_ACTION_PATH }}/build/linux-amd64
-          remote_path: trojan-go/${{ env.ENV_BRANCH_NAME }}/linux
-          clean: false         
+          name: artifact-trojan-go
+          path: ${{ env.ENV_ACTION_PATH }}/build/*amd64
           
-      - name: 上传文件windows=>Tencent Cloud COS Action
-        uses: TencentCloud/cos-action@v1
-        with:
-          secret_id: ${{ secrets.TENCENT_CLOUD_SECRET_ID }}
-          secret_key: ${{ secrets.TENCENT_CLOUD_SECRET_KEY }}
-          cos_bucket: ${{ secrets.COS_BUCKET }}
-          cos_region: ${{ secrets.COS_REGION }}
-          local_path: ${{ env.ENV_ACTION_PATH }}/build/windows-amd64
-          remote_path: trojan-go/${{ env.ENV_BRANCH_NAME }}/windows
-          clean: false         
+#       - name: 上传文件darwin-amd64=>Tencent Cloud COS Action
+#         uses: TencentCloud/cos-action@v1
+#         with:
+#           secret_id: ${{ secrets.TENCENT_CLOUD_SECRET_ID }}
+#           secret_key: ${{ secrets.TENCENT_CLOUD_SECRET_KEY }}
+#           cos_bucket: ${{ secrets.COS_BUCKET }}
+#           cos_region: ${{ secrets.COS_REGION }}
+#           local_path: ${{ env.ENV_ACTION_PATH }}/build/darwin-amd64
+#           remote_path: trojan-go/${{ env.ENV_BRANCH_NAME }}/darwin
+#           clean: false          #清空远程存储桶当前路径下的文件
+          
+#       - name: 上传文件linux-amd64=>Tencent Cloud COS Action
+#         uses: TencentCloud/cos-action@v1
+#         with:
+#           secret_id: ${{ secrets.TENCENT_CLOUD_SECRET_ID }}
+#           secret_key: ${{ secrets.TENCENT_CLOUD_SECRET_KEY }}
+#           cos_bucket: ${{ secrets.COS_BUCKET }}
+#           cos_region: ${{ secrets.COS_REGION }}
+#           local_path: ${{ env.ENV_ACTION_PATH }}/build/linux-amd64
+#           remote_path: trojan-go/${{ env.ENV_BRANCH_NAME }}/linux
+#           clean: false         
+          
+#       - name: 上传文件windows=>Tencent Cloud COS Action
+#         uses: TencentCloud/cos-action@v1
+#         with:
+#           secret_id: ${{ secrets.TENCENT_CLOUD_SECRET_ID }}
+#           secret_key: ${{ secrets.TENCENT_CLOUD_SECRET_KEY }}
+#           cos_bucket: ${{ secrets.COS_BUCKET }}
+#           cos_region: ${{ secrets.COS_REGION }}
+#           local_path: ${{ env.ENV_ACTION_PATH }}/build/windows-amd64
+#           remote_path: trojan-go/${{ env.ENV_BRANCH_NAME }}/windows
+#           clean: false         
           
           
           
